--- a/index.html
+++ b/index.html
@@ -48,16 +48,14 @@
 <div class="container text-center">
     <table border="0" align="center">
       <tr>
-        <td width="700" align="center" valign="middle"><h3>AAAI 2019 Tutorial on</h3>
-         <span class="title"><h4>On Explainable AI:</h4> </span>
+        <td width="700" align="center" valign="middle"><h3>1st BSU AI & Data Science Conference, 2025</h3>
          <span class="title"><h5> From Theory to Motivation, Applications and Limitations</h5> </span>
          <span class="title"><h5>Sunday, January 27, 2019</h5> </span>
          <span class="title"><h5>8:30 AM – 12:30 AM</h5> </span>
-          <span class="title"><h5> <a href="https://github.com/xaitutorial2019/xaitutorial2019.github.io/raw/master/slides/aaai_2019_xai_tutorial.pdf">Download Slides</a> </h5></span>
         </td>
       </tr>
     </table>
-    <p><img class="img-rounded" src="assets/images/main.jpg" width="100%" height="200" align="center" /></p>
+    <p><img class="img-rounded" src="assets/images/banner-bowie.jpg" width="100%" height="200" align="center" /></p>
      
 </div>
 
