--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
 
 <!-- <nav class="navbar navbar-inverse"> </nav> -->
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
+<nav class="navbar navbar-expand-sm bg-warning navbar-dark">
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -67,24 +67,22 @@
 <div class="container text-center">
     <table border="0" align="center">
       <tr>
-        <td width="700" align="center" valign="middle"><h3>1st BSU AI & Data Science Conference, 2025</h3>
-    
-         <span class="title"><h5>April, 11, 2025</h5> </span>
-         <span class="title"><h5>8 am - 5 pm</h5> </span>
+        <td width="700" align="center" valign="middle">
+          <h3>1st BSU AI & Data Science Conference, 2025</h3>
+          <span class="title"><h5>April 11, 2025</h5> </span>
+          <span class="title"><h5>8 am - 5 pm</h5> </span>
         </td>
       </tr>
     </table>
     <p><img class="img-rounded" src="assets/images/banner-bowie.jpg" width="100%" height="200" align="center" /></p>
-     
 </div>
 
 
 <div class="container-fluid text-center">
-  
   <div class="row content">
     <div class="col-md-1 sidenav"></div>
     <div class="col-md-10 text-left">
-        <h2 align="center">Overview</h2>
+        <h2 align="center"></h2>
         <p>Welcome to the 1st Bowie State University AI & Data Science Conference! This event brings together researchers, professionals, students, and thought leaders to explore the latest advancements and emerging trends in AI and data science. The conference will provide an inspiring platform for discussing cutting-edge research, innovative applications, and the transformative potential of these fields in various sectors.</p>
      </div>
     <div class="col-md-1 sidenav"></div>
