--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
   
 </div> -->
 
-<footer class="container-fluid text-left">
+<footer class="container-fluid">
     <div class="col-md-1 sidenav">
         <!--  -->
     </div>
     
     <div class="col-md-10 text-center">
-      <p >BSU AI & Data Science Conference, 2025</p>
+      <p>BSU AI & Data Science Conference, 2025</p>
       <p>Department of Computer Science, Bowie State University</p>
     </div>
     
