--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Explainable AI</title>
+  <title>BSU AI & Data Conf</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -63,16 +63,24 @@
   </div>
 </nav>
 
-  
-<div class="container text-center">
-    <table border="0" align="center">
-      <tr>
-        <td width="700" align="center" valign="middle">
-          <h3>1st BSU AI & Data Science Conference, 2025</h3>
-        </td>
-      </tr>
-    </table>
-    <p><img class="img-rounded" src="assets/images/banner-bowie.jpg" width="100%" height="200" align="center" /></p>
+<div class="container-fluid text-center">
+  <div class="row content">
+    <div class="col-md-1 sidenav"></div>
+    <div class="col-md-10">  
+      <div class="container text-center">
+          <table border="0" align="center">
+            <tr>
+              <td width="700" align="center" valign="middle">
+                <h3>1st BSU AI & Data Science Conference, 2025</h3>
+              </td>
+            </tr>
+          </table>
+          <img class="img-rounded" src="assets/images/banner-bowie.jpg" width="100%" height="200" align="center" />
+          <p align="right">Date: April 11, 2025 </p>
+      </div>
+      <div class="col-md-1 sidenav"></div>
+    </div>
+  </div>
 </div>
 
 
@@ -80,10 +88,6 @@
   <div class="row content">
     <div class="col-md-1 sidenav"></div>
     <div class="col-md-10 text-left">
-        <h4 align="right">
-          <span class="title"><h5>Date: April 11, 2025</h5> </span>
-        </h3>
-        <p></p>
         <p align="left">Welcome to the 1st Bowie State University AI & Data Science Conference! This event brings together researchers, professionals, students, and thought leaders to explore the latest advancements and emerging trends in AI and data science. The conference will provide an inspiring platform for discussing cutting-edge research, innovative applications, and the transformative potential of these fields in various sectors.</p>
      </div>
     <div class="col-md-1 sidenav"></div>
@@ -125,8 +129,7 @@
     </div>
     
     <div class="col-md-10 text-center">
-      <p>BSU AI & Data Science Conference, 2025</p>
-      <p>Department of Computer Science, Bowie State University</p>
+      <p>&copy; Department of Computer Science, Bowie State University</p>
     </div>
     
     <div class="col-md-1 sidenav">
