--- a/index.html
+++ b/index.html
@@ -44,29 +44,43 @@
 <body>
 
 <!-- <nav class="navbar navbar-inverse"> </nav> -->
-<nav class="navbar navbar-expand-sm bg-warning navbar-dark">
-  <div class="container-fluid">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Registration</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Program</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Directions</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+
 
 <div class="container-fluid text-center">
   <div class="row content">
     <div class="col-md-1 sidenav"></div>
-    <div class="col-md-10">  
+    <div class="col-md-10"> 
+
+      <nav class="navbar navbar-expand-sm bg-warning navbar-dark">
+        <div class="container-fluid">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Registration</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Program</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Directions</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      </div>
+      <div class="col-md-1 sidenav"></div>
+    </div>
+  </div>
+</div>
+
+
+<div class="container-fluid text-center">
+  <div class="row content">
+    <div class="col-md-1 sidenav"></div>
+    <div class="col-md-10"> 
       <div class="container text-center">
           <table border="0" align="center">
             <tr>
