--- a/index.html
+++ b/index.html
@@ -55,21 +55,20 @@
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" title="Conference Home Page" href=".">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Registration</a>
+              <a class="nav-link" title="Register for the Conference" href="registration">Registration</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Program</a>
+              <a class="nav-link" title="Conference Program" href="program">Program</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Directions</a>
+              <a class="nav-link" title="Directions to the Conference" href="directions">Directions</a>
             </li>
           </ul>
         </div>
       </nav>
-
       </div>
       <div class="col-md-1 sidenav"></div>
     </div>
@@ -128,9 +127,16 @@
     <div class="col-md-1 sidenav"></div>
   </div>
 
-  
+  <div class="row content">
+    <div class="col-md-1 sidenav"></div>
+    <div class="col-md-10 text-left">
+        <h2 align="center">Sponsors</h2>
+        <img class="img-rounded" src="assets/images/logo-bowie.jpg" width="100%" height="20" align="center" />
+    </div>
+    <div class="col-md-1 sidenav"></div>
+  </div>
 
- 
+
 </div>
 
 <!-- <div class="container text-center">
