--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div class="col-md-1 sidenav"></div>
     <div class="col-md-10 text-left">
         <h2 align="center">Sponsors</h2>
-        <img class="img-rounded" src="assets/images/logo-bowie.jpg" width="100%" height="20" align="center" />
+        <img class="img-rounded" src="assets/images/logo-bowie.png" width="100%" height="20" align="center" />
     </div>
     <div class="col-md-1 sidenav"></div>
   </div>
