--- a/program/index.html
+++ b/program/index.html
@@ -55,13 +55,13 @@
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" title="Conference Home Page" href=".">Home</a>
+              <a class="nav-link" title="Conference Home Page" href=".">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="Register for the Conference" href="registration">Registration</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="Conference Program" href="program">Program</a>
+              <a class="nav-link active" title="Conference Program" href="program">Program</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="Directions to the Conference" href="directions">Directions</a>
@@ -101,40 +101,66 @@
   <div class="row content">
     <div class="col-md-1 sidenav"></div>
     <div class="col-md-10 text-left">
-        <p align="left">Welcome to the 1st Bowie State University AI & Data Science Conference! This event brings together researchers, professionals, students, and thought leaders to explore the latest advancements and emerging trends in AI and data science. The conference will provide an inspiring platform for discussing cutting-edge research, innovative applications, and the transformative potential of these fields in various sectors.</p>
-     </div>
-    <div class="col-md-1 sidenav"></div>
-  </div>
+      	8:45am-9am: Provost & Dean
+      	9am-11:00am: 3 invited talks (Theme: AI technology & cybersecurity infrastructure) 
+      	11:00am-12pm: panel discussion
+      	12pm-1pm: lunch and poster session
+      	1pm-2:00pm: panel discussion
+      	2:00pm-3:20pm: 2 invited talks
+      	3:20pm-5pm: Workshop on AI
 
-
-  <div class="row content">
-    <div class="col-md-1 sidenav"></div>
-    <div class="col-md-10 text-left">
-        <h2 align="center">Conference Highlights</h2>
-        <h4 align="left">Keynote Speakers</h4>
-        <p align="left">Hear from industry experts and academic pioneers who are shaping the future of AI and data science.</p>
-  
-        <h4 align="left">Panel Discussions</h4>
-        <p align="left">Engage in in-depth discussions on topics like machine learning, data analytics, natural language processing, computer vision, and generative AI.</p>
-  
-        <h4 align="left">Workshops</h4>
-        <p align="left">Hands-on sessions to help attendees gain practical skills in AI model development, data engineering, and ethical AI practices.</p>
-  
-        <h4 align="left">Poster Session</h4>
-        <p align="left"> Explore innovative ideas and research in our poster session, where students and early-career researchers showcase their latest projects and receive feedback from conference attendees and experts. This session offers a dynamic opportunity to engage with emerging research and exchange ideas in an interactive setting. </p>
+      <div class="table-responsive">          
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Time</th>
+              <th>Program</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>8:45am-9:00am</td><td>Opening Speech</td>
+            </tr>
+            <tr>
+              <td>9:00am-9:30am</td><td>Invited Talk I</td>
+            </tr>
+            <tr>
+              <td>9:30am-10:00am</td><td>Invited Talk II</td>
+            </tr>
+            <tr>
+              <td>10:00am-10:30am</td><td>Coffee Break</td>
+            </tr>
+            <tr>
+              <td>10:30am-11:00am</td><td>Invited Talk III</td>
+            </tr>
+            <tr>
+              <td>11:00am-12:00pm</td><td>Panel Discussion</td>
+            </tr>
+            <tr>
+              <td>12:00pm-1:00pm</td><td>Lunch & Poster Session</td>
+            </tr>
+            <tr>
+              <td>1:00pm-2:00pm</td><td>Panel Discussion</td>
+            </tr>
+            <tr>
+              <td>2:00pm-2:30pm</td><td>Invited Talk IV</td>
+            </tr>
+            <tr>
+              <td>2:30pm-3:00pm</td><td>Invited Talk IV</td>
+            </tr>
+            <tr>
+              <td>3:00pm-3:20pm</td><td>Coffee Break</td>
+            </tr>
+            <tr>
+              <td>3:20pm-5:00pm</td><td>Workshop on AI</td>
+            </tr>
+          </tbody>
           
     </div>
     <div class="col-md-1 sidenav"></div>
   </div>
 
-  <div class="row content">
-    <div class="col-md-1 sidenav"></div>
-    <div class="col-md-10 text-left">
-        <h2 align="center">Sponsors</h2>
-        <img class="img-rounded" src="assets/images/logo-bowie.jpg" width="100%" height="20" align="center" />
-    </div>
-    <div class="col-md-1 sidenav"></div>
-  </div>
+
 
 
 </div>
