--- a/index.html
+++ b/index.html
@@ -58,13 +58,19 @@
               <a class="nav-link active" title="Conference Home Page" href=".">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" title="About" href="about">About</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" title="Register for the Conference" href="registration">Registration</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="Conference Program" href="program">Program</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="Directions to the Conference" href="directions">Directions</a>
+              <a class="nav-link" title="Conference Venue" href="venue">Venue</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" title="Contact" href="contact">Contact</a>
             </li>
           </ul>
         </div>
