--- a/program/index.html
+++ b/program/index.html
@@ -58,13 +58,19 @@
               <a class="nav-link" title="Conference Home Page" href=".">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" title="About" href="about">About</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" title="Register for the Conference" href="registration">Registration</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" title="Conference Program" href="program">Program</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="Directions to the Conference" href="directions">Directions</a>
+              <a class="nav-link" title="Conference Venue" href="venue">Venue</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" title="Contact" href="contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -101,16 +107,8 @@
   <div class="row content">
     <div class="col-md-1 sidenav"></div>
     <div class="col-md-10 text-left">
-      	8:45am-9am: Provost & Dean
-      	9am-11:00am: 3 invited talks (Theme: AI technology & cybersecurity infrastructure) 
-      	11:00am-12pm: panel discussion
-      	12pm-1pm: lunch and poster session
-      	1pm-2:00pm: panel discussion
-      	2:00pm-3:20pm: 2 invited talks
-      	3:20pm-5pm: Workshop on AI
-
       <div class="table-responsive">          
-        <table class="table">
+        <table class="table-bordered">
           <thead>
             <tr>
               <th>Time</th>
@@ -153,6 +151,9 @@
             </tr>
             <tr>
               <td>3:20pm-5:00pm</td><td>Workshop on AI</td>
+            </tr>
+            <tr>
+              <td>5:00pm</td><td>End</td>
             </tr>
           </tbody>
           
