--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
   <div class="row content">
     <div class="col-md-1 sidenav"></div>
     <div class="col-md-10 text-left">
-        <p align="left">Welcome to the 1st Bowie State University AI & Data Science Conference! This event brings together researchers, professionals, students, and thought leaders to explore the latest advancements and emerging trends in AI and data science. The conference will provide an inspiring platform for discussing cutting-edge research, innovative applications, and the transformative potential of these fields in various sectors.</p>
+        <p align="left">The 1st BSU AI & Data Science Conference, 2025 will take place on April 11, 2025, from 8:00 AM to 5:00 PM, with the theme <b>Artificial Intelligence</b> and <b>Cybersecurity Infrastructure</b>. This event will bring together experts, faculty members, and students to discuss and explore the latest advancements and challenges in AI and data science, with a focus on their applications in cybersecurity.
+
+          The conference will feature invited talks, panel discussions, and a workshop led by distinguished experts from academia, industry, and government. These sessions will delve into cutting-edge research, practical applications, and ethical considerations at the intersection of AI and cybersecurity, providing a platform for knowledge exchange and fostering collaboration among attendees.
+          
+          The program will begin with an opening keynote speech, followed by three invited talks addressing key topics in AI and cybersecurity infrastructure. Two panel discussions will follow: the first will focus on identifying essential hands-on skills in AI and data science, and the second will address cybersecurity challenges and AI-guided solution strategies. In the afternoon, the conference will feature two additional invited talks and conclude with a workshop designed to equip participants with practical skills in AI and data science.</p>
      </div>
     <div class="col-md-1 sidenav"></div>
   </div>
