--- a/about/index.html
+++ b/about/index.html
@@ -94,7 +94,7 @@
               </td>
             </tr>
           </table>
-          <img class="img-rounded" src="assets/images/banner-bowie.jpg" width="100%" height="200" align="center" />
+          <img class="img-rounded" src="../assets/images/banner-bowie.jpg" width="100%" height="200" align="center" />
           <p align="right">Date: April 11, 2025 </p>
       </div>
       <div class="col-md-1 sidenav"></div>
@@ -113,8 +113,7 @@
             Bowie State University is conveniently located near three major airports in the Washington, D.C., and Baltimore area. From Baltimore/Washington International Thurgood Marshall Airport (BWI), the university is approximately 20 miles south taking around 30-40 minutes by car. From Ronald Reagan Washington National Airport (DCA), Bowie State is about 25 miles northeast and can be accessed via US-50 East or the I-495 Beltway, typically taking 40-50 minutes by car. From Washington Dulles International Airport (IAD), the university is around 50 miles east, with the fastest route being VA-267 and the I-495 Beltway, requiring about an hour to drive. Public transportation options include MARC trains and Metrobus routes connecting to nearby Bowie State MARC station for convenient access to campus.
         </p>
     
-        <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3099.8263418985835!2d-76.76192908838404!3d39.0192747393855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7e8e035da591d%3A0x293334c635ef01d1!2sBowie%20State%20University!5e0!3m2!1sen!2sus!4v1737304191240!5m2!1sen!2sus" ></iframe>
-
+        <iframe class="directions" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3099.8263418985835!2d-76.76192908838404!3d39.0192747393855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7e8e035da591d%3A0x293334c635ef01d1!2sBowie%20State%20University!5e0!3m2!1sen!2sus!4v1737304191240!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
      </div>
     <div class="col-md-1 sidenav"></div>
   </div>
