--- a/contact/index.html
+++ b/contact/index.html
@@ -55,16 +55,16 @@
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" title="Conference Home Page" href="home">Home</a>
+              <a class="nav-link active" title="Conference Home Page" href="../index">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="About" href="about">About</a>
+              <a class="nav-link" title="About" href="../about/">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="Register for the Conference" href="registration">Registration</a>
+              <a class="nav-link" title="Register for the Conference" href="../registration/">Registration</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="Conference Program" href="program">Program</a>
+              <a class="nav-link" title="Conference Program" href="../program/">Program</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="Conference Venue" href="venue">Venue</a>
@@ -103,22 +103,25 @@
 </div>
 
 
-<div class="container-fluid text-center">
+<div class="container-fluid text-left">
   <div class="row content">
     <div class="col-md-1 sidenav"></div>
     <div class="col-md-10 text-left">
         
-        <h2>Contact Information</h2>
+        <h2>Contact</h2>
         <p><strong>Dr. Md Kamruzzaman Sarker</strong></p>
-        <p>Communication Chair<br>
-        1st BSU AI & Data Science Conference (BAIDS)</p>
-        <p><strong>Email:</strong> <a href="mailto:msarker@bowiestate.edu">msarker@bowiestate.edu</a></p>
-        <p><strong>Phone:</strong> <a href="tel:+13018604501">301-860-4501</a></p>
         <p>Assistant Professor<br>
         Department of Computer Science<br>
         Bowie State University</p>
+
+        <p>Communication Chair<br> </p>
+
+        <p>1st BSU AI & Data Science Conference (BAIDS)</p>
+        <p><strong>Email:</strong> <a href="mailto:msarker@bowiestate.edu">msarker@bowiestate.edu</a></p>
+        <p><strong>Phone:</strong> <a href="tel:+13018604501">301-860-4501</a></p>
+        
         <address>
-            Computer Science Building – Room 320<br>
+            Location: Computer Science Building – Room 320<br>
             14000 Jericho Park Road<br>
             Bowie, MD 20715-9465, USA
         </address>
