--- a/contact/index.html
+++ b/contact/index.html
@@ -109,16 +109,15 @@
     <div class="col-md-10 text-left">
         
         <h2>Contact</h2>
-        <p><strong>Dr. Md Kamruzzaman Sarker</strong></p>
-        <p>Assistant Professor<br>
+        <p><strong>Dr. Md Kamruzzaman Sarker</strong><br>
+        Assistant Professor<br>
         Department of Computer Science<br>
         Bowie State University</p>
 
-        <p>Communication Chair<br> </p>
-
-        <p>1st BSU AI & Data Science Conference (BAIDS)</p>
-        <p><strong>Email:</strong> <a href="mailto:msarker@bowiestate.edu">msarker@bowiestate.edu</a></p>
-        <p><strong>Phone:</strong> <a href="tel:+13018604501">301-860-4501</a></p>
+        <p>Communication Chair<br> 
+        1st BSU AI & Data Science Conference (BAIDS)<br>
+        <strong>Email:</strong> <a href="mailto:msarker@bowiestate.edu">msarker@bowiestate.edu</a><br>
+        <strong>Phone:</strong> <a href="tel:+13018604501">301-860-4501</a></p>
         
         <address>
             Location: Computer Science Building – Room 320<br>
