--- a/registration/index.html
+++ b/registration/index.html
@@ -108,7 +108,7 @@
     <div class="col-md-1 sidenav"></div>
     <div class="col-md-10 text-left">
         
-        <h2>Register</h2>
+        <h2>Registration</h2>
         <p>
           Registration for the 1st BSU AI & Data Science Conference 2025 is now open, and attendance is completely free! Join us for an exciting day of learning, networking, and exploring the latest advancements in artificial intelligence and data science. To register, simply complete the short registration form below.
         </p>
@@ -127,6 +127,8 @@
 <footer class="container-fluid">
     <div class="col-md-1 sidenav">
         <!--  -->
+      <br>
+      <br>
     </div>
     
     <div class="col-md-10 text-center">
