--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <base href=".">
   <title>BSU AI & Data Conf</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,7 +59,7 @@
               <a class="nav-link active" title="Conference Home Page" href=".">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="About" href="about">About</a>
+              <a class="nav-link" title="About" href="about/">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="Register for the Conference" href="registration">Registration</a>
