--- a/program/index.html
+++ b/program/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <base href="..">
   <title>BSU AI & Data Conf</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,16 +56,16 @@
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" title="Conference Home Page" href="home">Home</a>
+              <a class="nav-link active" title="Conference Home Page" href=".">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="About" href="about">About</a>
+              <a class="nav-link" title="About" href="about/">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="Register for the Conference" href="registration">Registration</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="Conference Program" href=".">Program</a>
+              <a class="nav-link" title="Conference Program" href="program">Program</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="Conference Venue" href="venue">Venue</a>
@@ -94,7 +95,7 @@
               </td>
             </tr>
           </table>
-          <img class="img-rounded" src="../assets/images/banner-bowie.jpg" width="100%" height="200" align="center" />
+          <img class="img-rounded" src="assets/images/banner-bowie.jpg" width="100%" height="200" align="center" />
           <p align="right">Date: April 11, 2025 </p>
       </div>
       <div class="col-md-1 sidenav"></div>
