--- a/program/index.html
+++ b/program/index.html
@@ -110,8 +110,8 @@
         <div class="col-md-1 sidenav"></div>
         <div class="col-md-10 text-left">
             <div class="table-responsive">
-                <table class="table table-bordered">
-                    <thead>
+                <table class="table table-bordered table-striped">
+                    <thead class="thead-dark">
                         <tr>
                             <th>Time</th>
                             <th>Program</th>
