--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-- <nav class="navbar navbar-inverse"> </nav> -->
 
 
-<div class="container-fluid text-center">
+<div class="container-fluid text-left">
   <div class="row content">
     <div class="col-md-1 sidenav"></div>
     <div class="col-md-10"> 
