--- a/program/index.html
+++ b/program/index.html
@@ -54,7 +54,7 @@
   <!-- <nav class="navbar navbar-inverse"> </nav> -->
 
 
-  <div class="container-fluid text-center">
+  <div class="container-fluid text-left">
     <div class="row content">
       <div class="col-md-1 sidenav"></div>
       <div class="col-md-10">
@@ -62,10 +62,10 @@
           <div class="container-fluid">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" title="Conference Home Page" href=".">Home</a>
+                <a class="nav-link" title="Conference Home Page" href=".">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" title="Conference Program" href="program">Program</a>
+                <a class="nav-link active" title="Conference Program" href="program">Program</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" title="Register for the Conference" href="registration">Registration</a>
