--- a/registration/index.html
+++ b/registration/index.html
@@ -47,7 +47,7 @@
 <!-- <nav class="navbar navbar-inverse"> </nav> -->
 
 
-<div class="container-fluid text-center">
+<div class="container-fluid text-left">
   <div class="row content">
     <div class="col-md-1 sidenav"></div>
     <div class="col-md-10"> 
@@ -56,13 +56,13 @@
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" title="Conference Home Page" href=".">Home</a>
+              <a class="nav-link" title="Conference Home Page" href=".">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="Conference Program" href="program">Program</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" title="Register for the Conference" href="registration">Registration</a>
+              <a class="nav-link active" title="Register for the Conference" href="registration">Registration</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="Conference Venue" href="venue">Venue</a>
